kubernasty/crust/prometheus/node-exporter/Service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: node-exporter
  namespace: prometheus
  labels:
    app: node-exporter
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: node-exporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9100"
spec:
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: node-exporter
  ports:
    - name: https
      protocol: TCP
      port: 9100
      targetPort: 9100
